<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WeatherApp</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="no_location_permission">This app needs location permissions for full functionality</string>
    <string name="next_12_hours">Next 12 hours</string>
    <string name="show_weekly_forecast">Show weekly forecast</string>

    <string name="binding_show">Weekly forecast for %s</string>
    <string name="binding_wind_speed">Windspeed: %s</string>
    <string name="binding_humidity">Humidity: %s %</string>
    <string name="binding_clouds">Cloudiness: %s %</string>
    <string name="binding_celsius">%s °C</string>

    <string name="binding_temp">%s°C</string>
    <string name="binding_temp_min">▼ %s °</string>
    <string name="binding_temp_max">△ %s °</string>

    <string name="placeholder_wind">Wind: 5</string>
    <string name="placeholder_humidty">Humidity: 20%</string>
    <string name="placeholder_clouds">Cloudiness: 30%</string>

    <string name="placeholder_temp">22°</string>
    <string name="placeholder_temp_min">▼ 13°</string>
    <string name="placeholder_temp_max">△ 26°</string>

    <string name="ALGOLIA_APP_ID">plA2HD70HUT8</string>
    <string name="ALGOLIA_API_KEY">94134bf29dd613c3f1052eb7888d8158</string>
    <string name="ALGOLIA_INDEX_NAME">Locations</string>

    <string name="my_email">ksng.ge@gmail.com</string>
    <string name="my_subject">About: WeatherApp</string>

    <string name="key_notifications_daily">notifications_enabled</string>
    <string name="key_notifications_rain">notifications_rain</string>
    <string name="key_setting_daily">setting_daily</string>
    <string name="key_select_favorites">select_favorites</string>
    <string name="key_notification_time">notification_time</string>
    <string name="key_favorite_id">favorite_id</string>
    <string name="key_rain_interval">rain_interval</string>
    <string name="key_dark_theme">dark_theme</string>

    <string name="channel_daily_description">Notification channel for daily updates</string>
    <string name="channel_rain_description">Notification channel for rain checks</string>

    <string name="search_for_a_location_and_add_it_to_your_favorites_by_clicking_the_button">Search for a location and add it to your favorites by clicking the + button</string>
    <string name="uh_oh_much_emptiness">uh-oh much emptiness</string>
    <string name="show_details">Show details</string>
    <string name="weather_condition">Weather condition</string>
    <string name="remove">Remove</string>
    <string name="search_for_a_location">Search for a location</string>
    <string name="placeholder_humidity">Humidity: 40%</string>
    <string name="placeholder_description">Cloudy with a bit of sun</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="select_a_location">Select a location</string>
    <string name="update_interval">Update interval</string>

    <string-array name="hourly_detail_names">
        <item>Temperature</item>
        <item>Rain</item>
        <item>Humidity</item>
    </string-array>

    <string-array name="daily_detail_names">
        <item>Weekly Forecast</item>
        <item>Forecast Graph</item>
    </string-array>

    <string-array name="array_interval_entries">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>

    </string-array>
    <string-array name="array_interval_values">
        <item>1</item>
        <item>2 </item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="key_build_version">build_version</string>
    <string name="key_version_name">version_name</string>
    <string name="key_email_me">email_me</string>
    <string name="key_github">github</string>
    <string name="key_about_this_app">about_this_app</string>
    <string name="contact_me">Contact me</string>
    <string name="turn_on_gps">Please turn on your GPS for full functionality</string>
    <string name="gps_disabled">GPS is disabled :(</string>
    <string name="weather_app">Weather App</string>
    <string name="about_this_app">About this App</string>
    <string name="about_app_txt">This weather app is written in Kotlin for the purpose of practicing the concepts of Clean Architecture. Thus far, this app has been tested on my emulator and smartphone (Android P). It also works very well on my newer mobile device which I flashed with LineageOS (based on Android Q) For now, the only known issue is that the location provider is bugged in my emulator when running API 29. If you don\'t know what Clean architecture is and want to know more about it, click the button below.</string>

    <string name="find_out_more">Find out more</string>
    <string name="email_me">Email me</string>
    <string name="go_to_my_github">Go to my github</string>


</resources>
