<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/tv_temp_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/placeholder_temp"
        android:textColor="@android:color/black"
        android:textSize="80sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/placeholder_temp_min"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toStartOf="@+id/tv_temp_max"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_current" />

    <TextView
        android:id="@+id/tv_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_temp_max"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="@+id/tv_temp_current"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_current" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_temp_current"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hammersmith_one"
            android:gravity="center_horizontal"
            android:textSize="28sp"
            tools:text="The Hague" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_wind"
            style="@style/style_tv_favorite_current_attributes"
            tools:text="@string/placeholder_wind" />

        <TextView
            android:id="@+id/tv_humidity"
            tools:text="@string/placeholder_humidty"
            style="@style/style_tv_favorite_current_attributes" />

        <TextView
            android:id="@+id/tv_cloudiness"
            style="@style/style_tv_favorite_current_attributes"
            tools:text="@string/placeholder_clouds" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>